[tool.poetry]
name = "ssb-infrastructure"
version = "0.1.0"
description = ""
authors = ["Jueuunn7 <wndmsrla1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pulumi-aws = "^6.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
